# youtube-article-ai

./: .gitignore  Cargo.toml  example.env
src/: ai.rs  config.rs  main.rs  transcript.rs
src/ai/: completions.rs  deepinfra.rs
