[package]
name = "youtube-article-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20.0"
dotenvy = "0.15.7"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
